--- a/control_radar/pubspec.yaml
+++ b/control_radar/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   get_it: ^6.0.0
   flutter_screenutil: ^5.0.0
   syncfusion_flutter_sliders: ^19.2.59
+  cached_network_image: ^3.1.0
+  google_maps_flutter: ^0.5.21+8
+  firebase_core: ^1.6.0
+  firebase_database: ^7.2.2
+  shared_preferences: ^2.0.7
+  photo_view: ^0.12.0
 
 dev_dependencies:
   flutter_test:
